--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
         <div class="settings-panel">
             <label for="periodDuration">Period Length:</label>
             <select id="periodDuration">
+                <option value="12">12 min</option>
                 <option value="15">15 min</option>
                 <option value="20" selected>20 min</option>
             </select>
@@ -22,6 +23,7 @@
             <label for="overtimeDuration">Overtime Length:</label>
             <select id="overtimeDuration">
                 <option value="0" selected>-</option>
+                <option value="5">5 min</option>
                 <option value="10">10 min</option>
             </select>
         </div>
@@ -78,7 +80,9 @@
             <label>Duration:</label>
             <select id="penaltyDurationSelect">
                 <option value="120" selected>2:00</option>
+                <option value="240" selected>2:00+2:00</option>
                 <option value="300">5:00</option>
+                <option value="420" selected>2:00+5:00</option>
                 <option value="600">10:00</option>
             </select>
             <br/>
