Better score display

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
                     <div class="team" id="team1">
                         <input type="text" id="team1Name" class="team-name" value="Home Team" />
                         <div class="score" id="score1">
-                            Score: <span id="score1Value">0</span>
+                            <span id="score1Value">0</span>
                             <span class="score-widget">
                                 <button class="score-btn score-up" id="score1Up">&#9650;</button>
                                 <button class="score-btn score-down" id="score1Down">&#9660;</button>
@@ -62,7 +62,7 @@
                     <div class="team" id="team2">
                         <input type="text" id="team2Name" class="team-name" value="Visitor Team" />
                         <div class="score" id="score2">
-                            Score: <span id="score2Value">0</span>
+                            <span id="score2Value">0</span>
                             <span class="score-widget">
                                 <button class="score-btn score-up" id="score2Up">&#9650;</button>
                                 <button class="score-btn score-down" id="score2Down">&#9660;</button>
